# llm-proxy-rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  run.sh
config/: example-config.yaml
src/: main.rs
src/backends/: anthropic.rs  mod.rs  openai.rs  traits.rs
src/config/: loader.rs  mod.rs  models.rs
src/logging/: mod.rs  request_logger.rs
src/proxy/: client.rs  mod.rs  retry.rs  router.rs
src/server/: anthropic.rs  openai.rs
src/streaming/: mod.rs
src/transform/: headers.rs  jsonpath.rs  mod.rs  model.rs  regex.rs
src/types/: anthropic.rs  errors.rs  mod.rs  openai.rs
